# tedditor

./: .gitignore  README.md  builder.ui  com.github.erdragh.tedditor.gschema.xml  gschemas.compiled  main.c  meson.build  resources.c  run.sh  tedditor  tedditor.c  tedditor.gresource.xml  tedditor.h  tedditorwin.c  tedditorwin.h  window.ui
